# AIFP-AOS

./: .env.example  .gitignore  ARCHITECTURE.md  AiFinPay_Autonomous_Growth_OS_Technical_Assignment_14_Days_EN.docx  AiFinPay_Autonomous_Growth_OS_Technical_Assignment_14_Days_EN.txt  AiFinPay_Google_ADK_DeepSeek_Moltbook_Integration_Guide_RU.docx  DAY1_DELIVERABLES.md  Dockerfile.dev  PC_SETUP_GUIDE.md  README.md  alembic.ini  dev-guide.txt  docker-compose.dev.yml  pyproject.toml  requirements.txt
.aider.tags.cache.v4/: cache.db-shm  cache.db-wal
.devcontainer/: .devcontainer.json  devcontainer.json  docker-compose.devcontainer.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260721_initial_foundation.py  20260722_enriched_agents.py  20260723_create_tasks_table.py  20260724_enrich_approvals.py  7ff8e3bbcdfd_add_metadata_to_audit_and_schema_updates.py  e97c7449d888_add_sources_and_enrich_content_items.py
apps/agents/: __init__.py  base.py  registry.py  specialized.py
apps/api/: config.py  main.py  models.py
apps/api/routers/: approvals.py  system.py
apps/core/: sanitizer.py
apps/core/audit/: service.py
apps/core/models/: factory.py  llm.py
apps/core/orchestrator/: engine.py
apps/core/policy/: engine.py
apps/dashboard/: index.html  package.json  tailwind.config.js
apps/dashboard/src/: index.css  main.tsx
apps/dashboard/src/lib/: api.ts
apps/dashboard/src/pages/: Dashboard.tsx
apps/models/: __init__.py  agent.py  approval.py  audit_event.py  base.py  campaign.py  content_item.py  source.py  task.py
apps/workers/: tasks.py
migrations/: env.py  script.py.mako
tests/: test_agent_lookup.py  test_api_campaigns.py  test_api_endpoints.py  test_approval_flow.py  test_content_strategy.py  test_foundation.py  test_market_intelligence.py  test_task_engine.py
