[project]
name = "aifp-aos"
version = "0.1.0"
description = "AiFinPay Autonomous Growth OS - AI-powered marketing and growth automation system"
authors = [
    {name = "AiFinPay", email = "dev@aifinpay.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.31",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    
    # Task Queue
    "dramatiq[redis]>=1.17.0",
    
    # Validation & Serialization
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    
    # HTTP Client
    "httpx>=0.27.0",
    
    # Environment
    "python-dotenv>=1.0.1",
    
    # Google ADK & LiteLLM
    "google-adk>=0.1.0",
    "litellm>=1.40.0",
    
    # Utilities
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    
    # Blockchain (for x402 payments)
    "solana>=0.30.0",
    "web3>=6.0.0",
    
    # Social Media APIs
    "tweepy>=4.14.0",
    "python-telegram-bot>=20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "black>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
