[project]
name = "aifp-aos"
version = "0.1.0"
description = "AiFinPay Autonomous OS"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.31",
    "alembic>=1.13.2",
    "pydantic-settings>=2.3.4",
    "litellm>=1.40.0",
    "google-adk>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "dramatiq[redis]>=1.17.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "tests*"]
